--- a/pom.xml
+++ b/pom.xml
@@ -81,12 +81,14 @@
 			<artifactId>org.eclipse.jgit</artifactId>
 			<version>4.7.0.201704051617-r</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.kohsuke/github-api -->
+		<!-- https://mvnrepository.com/artifact/org.eclipse.mylyn.github/org.eclipse.egit.github.core -->
 		<dependency>
-			<groupId>org.kohsuke</groupId>
-			<artifactId>github-api</artifactId>
-			<version>1.85</version>
+			<groupId>org.eclipse.mylyn.github</groupId>
+			<artifactId>org.eclipse.egit.github.core</artifactId>
+			<version>2.1.5</version>
 		</dependency>
+
+
 	</dependencies>
 	<pluginRepositories>
 		<!-- required for JDT dependency -->
